# dl-overcook

./: .gitignore  AGENTS.md  README.md  pyproject.toml
configs/: collect_demonstrations.yaml  evaluate.yaml  play.yaml
docs/: EVALUATION_PROTOCOL.md  EXPERIMENT_HISTORY.md  FAILURE_ANALYSIS.md  PROJECT_STRATEGY.md  REPRODUCIBILITY.md  RESEARCH_QUESTIONS.md  RESULTS.md  architecture.md  instructions_en.md  kaggle_workflow.md  parallel_workspaces.md  stage_a_ablations.md  stage_b_state_augmentation.md  stage_c_partners.md
final/: README_STUDENT_AGENT.md  run_student_agent_benchmark.py
policies/: basic_policies.py  rl_policy.py  scenario4_policy.py  template.py
scripts/: benchmark_final_stage_d.py  collect_state_buffer.py  distill_asymmetric_advantages.py  distill_counter_circuit.py  distill_scenario4.py  evaluate_fallback_tournament.py  evaluate_scenario4_variants.py  inspect_state_buffer.py  package_kaggle_run.py  package_kaggle_scenario4_eval.py  package_kaggle_throughput_benchmark.py  render_scenario4_rollout.py  run_final_agent_benchmark.py  smoke_stage_d_router.py  train.py
src/: checkpointing.py  collect_demonstrations.py  constants.py  dataset_metadata.py  environment.py  episode.py  evaluate.py  experiment_config.py  logging_utils.py  policy_loader.py  policy_wrappers.py  runner.py  seed_utils.py  state_initialization.py
tests/: conftest.py  test_build_policy_smoke.py  test_checkpoint_selection.py  test_checkpointing.py  test_config.py  test_environment.py  test_evaluation.py  test_kaggle_packaging.py  test_kaggle_throughput_packaging.py  test_partners.py  (+8 more)
(+154 files in other folders)
